RESOLVED FIXED40640
[GTK] ClipboardGtk::setURL does not match the behavior of other platforms
https://bugs.webkit.org/show_bug.cgi?id=40640
Summary [GTK] ClipboardGtk::setURL does not match the behavior of other platforms
Martin Robinson
Reported 2010-06-15 15:33:26 PDT
Other platforms set the clipboard text as the URL and escape the label when creating the markup portion. GTK+ should do this as well and also extend the logic to PasteboardGtk.
Attachments
Patch for this issue (5.20 KB, patch)
2010-06-15 15:41 PDT, Martin Robinson
no flags
Martin Robinson
Comment 1 2010-06-15 15:41:57 PDT
Created attachment 58830 [details] Patch for this issue
Gustavo Noronha (kov)
Comment 2 2010-06-16 13:54:02 PDT
Comment on attachment 58830 [details] Patch for this issue LGTM
Martin Robinson
Comment 3 2010-06-16 14:18:16 PDT
Comment on attachment 58830 [details] Patch for this issue Clearing flags on attachment: 58830 Committed r61281: <http://trac.webkit.org/changeset/61281>
Martin Robinson
Comment 4 2010-06-16 14:18:20 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.